<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="cn.studyjams.s1.sj127.greenhouse.MainActivity"
    android:fillViewport="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical"
        android:background="@color/highlighted_text_material_dark">

        <Button
            android:id="@+id/Btn_WeiHai"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Topic_1"
        android:textSize="26sp"
        android:onClick="onClick"/>

        <Button
            android:id="@+id/Btn_JingHua"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Topic_2"
            android:textSize="26sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/Btn_LvYi"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Topic_3"
            android:textSize="26sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/Btn_JiangXin"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Topic_4"
            android:textSize="26sp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/Btn_more"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Topic_5"
            android:textSize="26sp"
            android:onClick="onClick"/>
        <ImageView
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src ="@drawable/house"
            />



    </LinearLayout>

</ScrollView>